[package]
name = "winfolder"
version = "0.1.1"
description = "Provides locations of standard Windows folders on the current system."
authors = ["David Herman <david.herman@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/dherman/winfolder"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]

[target.'cfg(windows)'.dependencies]
guid = "0.1.0"
winapi = "0.2.8"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
